# Semantic-Color-Constancy-Using-CNN

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
semantic_color_constancy_using_cnn/: __init__.py  config.py  dataset.py  dataset_processing.py  features.py  plots.py
semantic_color_constancy_using_cnn/modeling/: __init__.py  model.py  predict.py  train.py
