[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "semantic_color_constancy_using_cnn"
version = "0.0.1"
description = "A PyTorch implementation of the research paper 'Semantic White Balance: Semantic Color Constancy using Convolutional Neural Networks (SCC-CNN)' authored by Mahmoud Afifi."
authors = [
  { name = "Achraf Tahar" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["semantic_color_constancy_using_cnn"]
force_sort_within_sections = true
